SERVER-22537 Fix DBDirectClient's OperationContext not getting updated.

This fixes an issue where the DBDirectClient used by the $lookup stage
would have the previous OperationContext and trigger an invalid memory
access when sending a getMore request as it unwinds the results.

Calling PipelineProxyStage::doDetachFromOperationContext() now causes
the DBDirectClient's OperationContext to be set to nullptr, and
PipelineProxyStage::doReattachToOperationContext() causes it to be set
to the current OperationContext.

(cherry picked from commit e1928f36d21a4193802d7fbdcb8fcd6df58f7aa7)